# C-Course---2023

./: CMakeLists.txt  main.cpp
src/: Aluno.cpp  Aluno.h  AlunoExtra.cpp  AlunoExtra.h  Equipa.cpp  Equipa.h  Escalao.cpp  Escalao.h  Escola.cpp  Escola.h  Treinador.cpp  Treinador.h
