cmake_minimum_required(VERSION 3.24)
project(Cpp_Projeto_Escola)

set(CMAKE_CXX_STANDARD 17)

add_executable(Cpp_Projeto_Escola main.cpp src/Aluno.cpp src/Aluno.h src/Escola.cpp src/Escola.h src/Escalao.cpp src/Escalao.h src/Equipa.cpp src/Equipa.h src/Treinador.cpp src/Treinador.h src/AlunoExtra.cpp src/AlunoExtra.h)
